--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -29,6 +29,7 @@
         /*horizontal-align: middle;*/
       }
       .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+        position: absolute;
         top: -9999px;
         bottom: -9999px;
         left: -9999px;
