--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -35,7 +35,7 @@
         bottom: -9999px;
         left: -9999px;
         right: -9999px;
-        margin: -100% 0;
+        margin-left:auto; margin-right:auto;
         overflow:hidden;
         vertical-align:middle;
         text-align: center;
