--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -30,9 +30,11 @@
       }
 
       .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+        position: absolute;
         margin-left:auto; margin-right:auto;
         overflow:hidden;
         vertical-align:middle;
+        display:table-cell;
         text-align: center;
         
 
