--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -42,9 +42,9 @@
       }
 
       .carousel-img-special {
+        top: 0;
         width:100%; 
         height: 400px; 
-        no-repeat center center transparent;
       }
 
 
