--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -42,7 +42,7 @@
       }
 
       .carousel-img-special {
-        top: 0;
+        vertical-align:middle;
         width:100%; 
         height: 400px; 
       }
