--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -42,7 +42,7 @@
       }
 
       .carousel-img-special {
-        background-position: center bottom;
+        background-position: right bottom;
         width:100%; 
         height: 400px; 
       }
