--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -38,7 +38,7 @@
         text-align: center;*/
       
       }
-      .tab-conversation {
+      .publisher-nav-color {
         color: black;
       }
 
