--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -38,7 +38,7 @@
         text-align: center;*/
       
       }
-      .publisher-nav-color {
+      #community-tab > span {
         color: black;
       }
 
