--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -38,7 +38,7 @@
         text-align: center;*/
       
       }
-      #community-tab > span {
+      #disqus_thread {
         color: black;
       }
 
