--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -38,7 +38,7 @@
         text-align: center;*/
       
       }
-      #disqus_thread > p{
+      #disqus_thread > span {
         color: black;
       }
 
