--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -40,6 +40,7 @@
       }
       #conversation > div.nav.nav-secondary > ul > li.dropdown.sorting > a {
         color: black;
+        text-decoration: line-through;
       }
 
 
