--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -38,10 +38,8 @@
         text-align: center;*/
       
       }
-      #disqus_thread {
-        color: black;
-      }
-body { font-size: 13px; color: white; background-color: #2c2c2c;}
+
+      #disqus_thread > body { font-size: 13px; color: white; background-color: #2c2c2c;}
 
 
 
