--- a/resources/testweb/united.bootstrap.css
+++ b/resources/testweb/united.bootstrap.css
@@ -892,7 +892,7 @@ body {
   font-family: "Ubuntu", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333333;
+  color: black;
   background-color: #ffffff;
 }
 input,
