--- a/resources/testweb/united.bootstrap.css
+++ b/resources/testweb/united.bootstrap.css
@@ -892,8 +892,8 @@ body {
   /*font-family: "Ubuntu", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;*/
   font-size: 14px;
   /*line-height: 1.42857143;*/
-  color: #333333;
-  background-color: #ffffff;
+  color: #343343;
+  background-color: #abcdef;
 }
 input,
 button,
