--- a/resources/testweb/united.bootstrap.css
+++ b/resources/testweb/united.bootstrap.css
@@ -903,7 +903,7 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
-a,span {
+a {
   color: #008A2E;
   text-decoration: none;
 }
@@ -3203,7 +3203,7 @@ tbody.collapse.in {
   padding: 3px 20px;
   font-size: 12px;
   line-height: 1.42857143;
-  color: #aea79f;
+  color: #ffffff;
   white-space: nowrap;
 }
 .dropdown-backdrop {
