--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -40,7 +40,7 @@
       }
 
       #disqus_thread > body { font-size: 13px; color: white; background-color: #2c2c2c;}
-
+      #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px; color: #5D3E19 }
 
 
 
