--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -39,9 +39,9 @@
       
       }
 
-      #disqus_thread > body { font-size: 13px; color: white; background-color: #2c2c2c;}
-      #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px; color: #5D3E19 }
-
+      #disqus_thread > body { font-size: 13px;  color: black !important;; background-color: #2c2c2c;}
+      #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px;  color: black !important;}
+      .dsq-comment-text p { color: black !important; }
 
 
       .nav-list {
