--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -36,74 +36,14 @@
         vertical-align:middle;
         display:table-cell;
         text-align: center;*/
-        
+      
       }
 
-      #dsq-comments-title h4 {
-        color:#333;
-      }
-      #disqus_thread {
-        padding:12px;
-        margin-bottom:-10px;
-      }
-      #disqus_thread h4 {
-        color:#333;
-        font-family: Helvetica, sans-serif;
-        font-size:12px;
-        padding-bottom:.5em;
-      }
-      #dsq-content div.dsq-options {
-        background:none;
-        padding-bottom:10px;
-      }
-      #dsq-comments li.dsq-comment {
-        margin-top:12px
-        margin-bottom:10px;
-        padding:5px;
-        background:#FFFFFF;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-        border:0px solid #ccc;
-      }
-      #dsq-content div.dsq-post-area {
-        padding:5px;
-        background:#F0F0E9;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-        border:1px solid #ccc;
-        -webkit-box-shadow: 0px 0px 10px #FFFFFF;
-        -moz-box-shadow: 0px 0px 10px #ECF40B;
-      }
-      #dsq-content .dsq-comment-header {
-        background:#F5F5F5;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-        border: 1px solid #ccc;
-      }
-      .dsq-brlink {
-        display:none;
-      }
-      #dsq-content .dsq-comment-message {
-        background:#EDEDED;
-        padding:5px;
-        margin-left: 15px;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-      }
-      #dsq-content #dsq-authenticate .dsq-login-buttons {
-        background:none;
-        background-image:none;
-        margin-bottom:0;
-      }
-      #dsq-content #dsq-form-area .dsq-textarea .dsq-textarea-wrapper,
-      #dsq-content #dsq-form-area .dsq-post-fields .dsq-input-wrapper {
-        border: 1px solid #ccc;
-      }
-      #dsq-new-post div.dsq-request-user-info {
-        background:none;
-        padding-bottom:0px;
-      }
+      #disqus_thread p { font-size: 13px;  color: black !important;; background-color: #2c2c2c;}
+      #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px;  color: black !important;}
+      .dsq-comment-text p { color: black !important; }
 
+      body { font-size: 13px; color: #008A2E; background-color: #ffffff;}
 
       .nav-list {
         width: 228px;
