--- a/resources/testweb/united.bootstrap.css
+++ b/resources/testweb/united.bootstrap.css
@@ -893,7 +893,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
-  background-color: #232232;
+  background-color: #fffffa;
 }
 input,
 button,
