--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -43,7 +43,7 @@
       #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px;  color: black !important;}
       .dsq-comment-text p { color: black !important; }
 
-      .panel-footer {
+      .panel-footer > ul {
         height: 32px;
         padding: 5px;
 
