--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -43,11 +43,6 @@
       #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px;  color: black !important;}
       .dsq-comment-text p { color: black !important; }
 
-      .panel-footer > ul {
-        height: 32px;
-        padding: 5px;
-
-      }
 
       .nav-list {
         width: 228px;
@@ -112,6 +107,13 @@
         margin-bottom: 0px;
         margin-right: 0px;
         margin-left: 0px;
+      }
+
+      
+      .panel-footer {
+        height: 32px;
+        padding: 5px;
+
       }
 
 
