--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -107,9 +107,10 @@
         margin-bottom: 0px;
         margin-right: 0px;
         margin-left: 0px;
+        padding: 0px;
       }
 
-      
+
       .panel-footer {
         height: 32px;
         padding: 5px;
