--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -231,7 +231,7 @@
 
   @media(min-width:993px) {
     #mynav {
-      font-size: .75em;
+      /*font-size: .75em;*/
     }
     #mynav > li {
       height: 30px;
