--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -113,7 +113,9 @@
         margin-right: 0px;
         margin-left: 0px;
       }
-      .panel-footer {
+   
+
+      .pager-footer {
         height: 41px;
       }
 
