--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -18,24 +18,42 @@
       bottom:0;
       }*/
       img {
-        display: block;
-        width:  auto;
+/*        display: inline-block;
         height: 100%;
         vertical-align: middle;
+        width:  auto;*/
+
+
+        border:1px solid #021a40;
 
         /*horizontal-align: middle;*/
       }
-      .carousel-inner > .item > img {
-        margin: 0 auto;
+      .list-group-item {
+        margin-top: -2px;
+        margin-bottom: -2px;
       }
 
+
+      .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+/*        position: absolute;
+        margin-left:auto; margin-right:auto;
+        overflow:hidden;
+        vertical-align:middle;
+        display:table-cell;
+        text-align: center;*/
+
+      }
+
+      #disqus_thread p { font-size: 13px;  color: black !important;; background-color: #2c2c2c;}
+      #dsq-content { font-family: Arial,Helvetica,sans-serif; font-size:12px;  color: black !important;}
+      .dsq-comment-text p { color: black !important; }
 
 
       .nav-list {
         width: 228px;
         margin: 30px 0 0;
         padding: 0;
-        background-color: #202020;
+        background-color: #F7F7F7;
         -webkit-border-radius: 6px;
         -moz-border-radius: 6px;
         border-radius: 6px;
@@ -47,7 +65,7 @@
         color: #ffffff;
         text-shadow: 0 -1px 0 
         rgba(0, 0, 0, 0.2);
-        background-color: #0088cc;
+        background-color: #BABABA;
       }
       #midCol.affix-top {
         position:fixed;
@@ -73,7 +91,12 @@
       }
       .navbar-input-group {
         font-size: 0px; /*removes whitespace between button and input*/
+
       }
+      #creator_search > button {
+        margin-left: -2px;
+      }
+
 
       .navbar-input-group input {
         border-top-right-radius: 0px;
@@ -84,11 +107,22 @@
         border-bottom-left-radius: 0px;
         border-left: 0px;
       }
-      .pager {
+      .navbar-input-group {
         margin-top: 0px;
         margin-bottom: 0px;
         margin-right: 0px;
         margin-left: 0px;
+      }
+   
+
+      .pager-footer {
+        height: 41px;
+      }
+
+
+      .pager {
+        margin-top: -6px;
+        
       }
 
 
@@ -102,7 +136,7 @@
         display: block;    
       }
       .input-group-addon {
-        background-color: #505050;
+        background-color: #F7F7F7;
       }
 
       .mini-submenu{
@@ -192,26 +226,29 @@
        width: auto;
        top: 0;
      }
-   }
+     .affix-top {
+      width: 100%;
+    }
+  }
 
-   @media(min-width:993px) {
+  @media(min-width:993px) {
     #mynav {
-      font-size: .75em;
+      /*font-size: .75em;*/
     }
     #mynav > li {
-      height: 30px;
+      height: 40px;
     }
 
     #mynav.affix-top {
       position: static;
       margin-top:30px;
-      width:auto;
+      width: 340px;
     }
 
     #mynav.affix {
       position: fixed;
-      top:40px;
-      width:auto;
+      top:-200px;
+      width: 340px;
     }
   }
   /* Hide for mobile, show later */
@@ -225,11 +262,11 @@
     }*/
 
     .navbar {
-      height: 60px;
+      height: 52px;
     }
     .sidebar {
       position: fixed;
-      top: 60px;
+      top: 52px;
       bottom: 0;
       left: 0;
       z-index: 1000;
@@ -306,6 +343,11 @@
 .small-chart {
   /*height: 50vh;*/
   height: 300px;
+  overflow: auto;
+}
+.small-table {
+  height: 289px;
+  overflow: auto;
 }
 
 .btn {
@@ -318,7 +360,7 @@
 /* Carousel base class */
 .carousel {
   height: 400px;
-  margin-bottom: 60px;
+  margin-bottom: 52px;
   margin-top: -20px;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -382,7 +424,8 @@
 
 .carousel-body {
   padding-bottom: 40px;
-  color: #DBDBDB; ;
-  background-color: #222222;
+/*  color: #DBDBDB;
+background-color: #222222;*/
+
 }
 
