--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -28,6 +28,10 @@
 
         /*horizontal-align: middle;*/
       }
+      #creator_search {
+        margin-top: 10px;
+      }
+
       .list-group-item {
         margin-top: -2px;
         margin-bottom: -2px;
