--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -31,7 +31,7 @@
       #creator_search {
         margin-top: 3px;
       }
-      #creator_search > div > span > input.form-control.typeahead.tt-input {    
+      #creator_search > div > span > input.form-control.typeahead.tt-hint {    
         width: 100px;
       }  
 
