--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -30,11 +30,11 @@
       }
       #creator_search {
         margin-top: 3px;
-        width: 100px;
+
       }
-      #creator_search > div > span{    
+      input[name=search_input] {    
         width: 100px;
-      }  
+      } 
 
       
 
