--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -32,7 +32,7 @@
         margin-top: 3px;
 
       }
-      input[name=search_input] {    
+      input[name="search_input"] {    
         width: 100px;
       } 
 
