--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -19,9 +19,10 @@
       }*/
 
       .vcenter {
-        display: inline-block;
+        display:table !important;
         vertical-align: middle;
         float: none;
+        
       }
 
       img {
@@ -40,7 +41,7 @@
 
 
       }
-      
+
 
 
       
