--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -38,10 +38,11 @@
       }
 
       .discover-image {
-       margin: -20px;
+       margin: -16px;
        padding: 0px;
        max-width: 100%;
        height: 150px;
+       border:0px;
      }
 
 
