--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -40,7 +40,7 @@
       .discover-image {
        margin: -16px;
        padding: 0px;
-       max-width: 100%;
+       width: 100%;
        height: 300px;
        border:0px;
      }
