--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -41,11 +41,13 @@
        margin: -15px;
        padding: 0px;
        border:0px;
+       border-radius: 6px;
        display: block;
        width:276px !important;
        height:208px !important;
        width: auto;
        height: auto;
+
 
      }
 
