--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -41,7 +41,8 @@
        margin: -15px;
        padding: 0px;
        border:0px;
-       border-radius: 6px;
+       border-top-left-radius:4px;
+       border-top-right-radius:4px;
        display: block;
        width:276px !important;
        height:208px !important;
