--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -40,7 +40,7 @@
       .discover-image {
        margin: -15px;
        padding: 0px;
-       border:0px;
+       border:1px solid #021a40;
        border-top-left-radius:4px;
        border-top-right-radius:4px;
        display: block;
