--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -40,14 +40,14 @@
       .discover-image {
        margin: -15px;
        padding: 0px;
-       /*border:1px solid #021a40;*/
+       border:0px;
        border-top-left-radius:4px;
        border-top-right-radius:4px;
        display: block;
-       width:100% !important;
+       
        height:208px !important;
-       width: auto;
-       height: auto;
+       width:auto !important;
+  
 
 
      }
