--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -38,14 +38,14 @@
       }
 
       .discover-image {
-       margin: -15px -17px -15px -15px;
+       margin: -15px;
        padding: 0px;
        border:0px;
        border-top-left-radius:4px;
        border-top-right-radius:4px;
        display: block;
        
-       height:208px !important;
+       height:209px !important;
        width:auto !important;
   
 
