--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -43,10 +43,10 @@
        border:0px;
        border-top-left-radius:4px;
        border-top-right-radius:4px;
-       display: block;
+/*       display: block;
        
        height:206.25px !important;
-       width:auto !important;
+       width:auto !important;*/
   
 
 
