--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -51,6 +51,8 @@
      }
      .remove-border {
       border:0px;
+            border-top-left-radius:4px;
+       border-top-right-radius:4px;
      }
 
 
