--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -18,7 +18,13 @@
       bottom:0;
       }*/
 
+      .stButton .stButton_gradient {
+        height: 24px !important;
+      }
 
+      .stButton .stFb, .stButton .stTwbutton, .stButton .stMainServices {
+        height: 24px !important;
+      }
 
       img {
 /*        display: inline-block;
@@ -51,13 +57,13 @@
      }
      .remove-border {
       border:0px;
-            border-top-left-radius:4px;
-       border-top-right-radius:4px;
-     }
+      border-top-left-radius:4px;
+      border-top-right-radius:4px;
+    }
 
 
 
-     .list-group-item {
+    .list-group-item {
       margin-top: -2px;
       margin-bottom: -2px;
     }
