--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -47,6 +47,7 @@
       }
       .discover-image {
        margin: -15px;
+       height: 241px;
        padding: 0px;
        border:0px;
        border-top-left-radius:4px;
