--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -20,8 +20,10 @@
       #square-style > .row > .col-md-3:nth-child(4n+1) {
         clear: both;
       }
+      #discover_creators_square > div:nth-child(4n+1) > div {
+        clear: both;
+      }
 
-      
       .stButton .stButton_gradient {
         height: 24px !important;
       }
