--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -18,6 +18,7 @@
       bottom:0;
       }*/
       .vtop {
+        margin: -15px;
         display: inline-block;
         vertical-align: top;
         float: none;
