--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -18,7 +18,7 @@
       bottom:0;
       }*/
       .vtop {
-        
+        margin-top: -20px;
         display: inline-block;
         vertical-align: top;
         float: none;
