--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -19,6 +19,7 @@
       }*/
       .vtop {
         margin-top: 0px;
+        margin-bottom: 0px;
         display: inline-block;
         vertical-align: top;
         float: none;
