--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -63,10 +63,10 @@
        border:0px;
        border-top-left-radius:4px;
        border-top-right-radius:4px;
-       display: block;
+/*       display: block;
        
-       height:164px !important;
-       width:auto !important;
+       height:206.25px !important;
+       width:auto !important;*/
 
      }
 
