--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -50,6 +50,7 @@
 
       }
 
+
       .thin-hr {
         margin-top: 20px;
         margin-bottom: 10px;
@@ -57,13 +58,16 @@
       .discover-tile {
        /* height: 580px;*/
      }
+     .discover-values {
+      height: 35px;
+     }
      .discover-image {
        margin: -15px;
        padding: 0px;
        border:0px;
        border-top-left-radius:4px;
        border-top-right-radius:4px;
-       
+
 /*       display: block;
        
        height:206.25px !important;
