--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -61,6 +61,9 @@
      .discover-values {
       height: 35px;
      }
+       .discover-under-name {
+      height: 40px;
+     }
      .discover-image {
        margin: -15px;
        padding: 0px;
