--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -70,6 +70,7 @@
        border:0px;
        border-top-left-radius:4px;
        border-top-right-radius:4px;
+       max-width: 320px;
 
 /*       display: block;
        
