--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -71,6 +71,7 @@
        border-top-left-radius:4px;
        border-top-right-radius:4px;
        max-width: 320px;
+       height: auto !important;
 
 /*       display: block;
        
