--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -19,7 +19,10 @@
       }*/
 
 
-
+      .black-borders {
+        margin-top: -30px;
+        margin-bottom: -30px;
+      }
 
       .vtop {
         margin-top: 0px;
