--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -66,10 +66,7 @@
      }
      .discover-image {
 
-        margin-top: -30px;
-        margin-bottom: -30px;
-
-       margin: -15px;
+       margin: -50px -15px -50px -15px;
        padding: 0px;
        border:0px;
        border-top-left-radius:4px;
