--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -65,7 +65,7 @@
       height: 40px;
      }
      .discover-image {
-      margin: -15px;
+      /*margin: -15px;*/
       width: 100%;
       height: 300px;
 
