--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -17,7 +17,27 @@
       position:relative; 
       bottom:0;
       }*/
-      img {
+
+
+      .neg-margins {
+        margin: -15px;
+        border-top-left-radius:4px;
+        border-top-right-radius:4px;
+      }
+
+      .vtop {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        display: inline-block;
+        vertical-align: top;
+        float: none;
+      }
+      /*dynamically wraps the discover page*/
+      #discover_creators_square > div:nth-child(4n+1) {
+       clear: both;
+     }
+
+     img {
 /*        display: inline-block;
         height: 100%;
         vertical-align: middle;
@@ -33,18 +53,65 @@
 
 
       }
+
+
+      .thin-hr {
+        margin-top: 20px;
+        margin-bottom: 10px;
+      }
+      .discover-tile {
+       /* height: 580px;*/
+     }
+     .discover-values {
+      height: 35px;
+    }
+    .discover-under-name {
+      height: 40px;
+    }
+    .discover-image {
+     margin: -15px;
+     padding: 0px;
+     border:0px;
+     border-top-left-radius:4px;
+     border-top-right-radius:4px;
      
 
+/*       display: block;
+       
+       height:206.25px !important;
+       width:auto !important;*/
 
-      
-
-      .list-group-item {
-        margin-top: -2px;
-        margin-bottom: -2px;
+     }
+     @media (min-width: 992px) {
+       .discover-desc {
+        height:152px !important;
+        width:auto !important;*/
       }
+    }
+
+    @media (min-width: 1200px) {
+     .discover-desc {
+      height:114px !important;
+      width:auto !important;*/
+    }
+  }
 
 
-      .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+  .remove-border {
+    border:0px;
+    border-top-left-radius:4px;
+    border-top-right-radius:4px;
+  }
+
+
+
+  .list-group-item {
+    margin-top: -2px;
+    margin-bottom: -2px;
+  }
+
+
+  .carousel-inner>.item>img, .carousel-inner>.item>a>img {
 /*        position: absolute;
         margin-left:auto; margin-right:auto;
         overflow:hidden;
